--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
 		"generate": "nuxt generate"
 	},
 	"dependencies": {
-		"bootstrap-vue": "^2.0.0-rc.11",
-		"bootstrap": "^4.3.1",
 		"@nuxtjs/axios": "^5.5.4",
-		"nuxt": "^2.8.1",
-		"heatboard.js": "github:PeterPain/heatboard.js"
+		"bootstrap": "^4.3.1",
+		"bootstrap-vue": "^2.0.0-rc.26",
+		"heatboard.js": "github:PeterPain/heatboard.js",
+		"nuxt": "^2.8.1"
 	},
 	"devDependencies": {
-		"@nuxtjs/eslint-config": "^0.0.1",
+		"@nuxtjs/eslint-config": "^1.0.1",
 		"@nuxtjs/eslint-module": "^0.2.1",
 		"babel-eslint": "^10.0.2",
 		"eslint": "^6.0.1",
-		"eslint-config-standard": ">=12.0.0",
+		"eslint-config-standard": "^13.0.1",
 		"eslint-plugin-import": ">=2.18.0",
 		"eslint-plugin-jest": ">=22.7.2",
 		"eslint-plugin-node": ">=9.1.0",
