--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"chokidar": "^3.0.2",
 		"jquery": "^3.4.1",
 		"jquery-color": "^3.0.0-alpha.1",
-		"nuxt": "^2.8.1"
+		"nuxt": "^2.8.1",
+		"vue-slider-component": "^3.0.33"
 	},
 	"devDependencies": {
 		"@nuxtjs/eslint-config": "^1.0.1",
