--- a/package.json
+++ b/package.json
@@ -13,27 +13,27 @@
 		"generate": "nuxt generate"
 	},
 	"dependencies": {
-		"@nuxtjs/axios": "^5.5.4",
+		"@nuxtjs/axios": "^5.6.0",
 		"bootstrap": "^4.3.1",
-		"bootstrap-vue": "^2.0.0-rc.27",
+		"bootstrap-vue": "^2.0.0",
 		"jquery": "^3.4.1",
 		"jquery-color": "^3.0.0-alpha.1",
-		"nuxt": "^2.8.1",
-		"vue-slider-component": "^3.0.38"
+		"nuxt": "^2.9.2",
+		"vue-slider-component": "^3.0.40"
 	},
 	"devDependencies": {
 		"@nuxtjs/eslint-config": "^1.1.2",
 		"@nuxtjs/eslint-module": "^1.0.0",
-		"babel-eslint": "^10.0.2",
-		"eslint": "^6.1.0",
-		"eslint-config-standard": "^13.0.1",
+		"babel-eslint": "^10.0.3",
+		"eslint": "^6.3.0",
+		"eslint-config-standard": "^14.1.0",
 		"eslint-plugin-import": "^2.18.2",
-		"eslint-plugin-jest": "^22.15.1",
-		"eslint-plugin-node": ">=9.1.0",
+		"eslint-plugin-jest": "^22.17.0",
+		"eslint-plugin-node": "^10.0.0",
 		"eslint-plugin-nuxt": ">=0.4.3",
 		"eslint-plugin-promise": ">=4.2.1",
-		"eslint-plugin-standard": ">=4.0.0",
+		"eslint-plugin-standard": "^4.0.1",
 		"eslint-plugin-vue": "^5.2.3",
-		"nodemon": "^1.19.1"
+		"nodemon": "^1.19.2"
 	}
 }
