--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "chessalyzer-front",
 	"version": "1.0.0",
 	"description": "My great Nuxt.js project",
-	"author": "PeterPain",
+	"author": "",
 	"private": true,
 	"scripts": {
 		"lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
