--- a/package.json
+++ b/package.json
@@ -13,19 +13,20 @@
 		"generate": "nuxt generate"
 	},
 	"dependencies": {
-		"@nuxtjs/axios": "^5.12.2",
-		"bootstrap": "^4.5.3",
-		"bootstrap-vue": "^2.19.0",
-		"jquery": "^3.5.1",
-		"jquery-color": "^3.0.0-alpha.1",
-		"nuxt": "^2.14.7",
-		"vue-slider-component": "^3.2.10"
+		"@nuxtjs/axios": "^5.13.6",
+		"bootstrap": "^4.6.2",
+		"bootstrap-vue": "^2.23.1",
+		"jquery": "^3.7.1",
+		"jquery-color": "3.0.0-alpha.2",
+		"nuxt": "^2.17.2",
+		"vue-slider-component": "^3.2.24"
 	},
 	"devDependencies": {
 		"@nuxtjs/eslint-config": "^5.0.0",
-		"@nuxtjs/eslint-module": "^3.0.1",
+		"@nuxtjs/eslint-module": "^3.1.0",
 		"babel-eslint": "^10.1.0",
-		"eslint": "^7.13.0",
+		"eslint": "^7.32.0",
 		"eslint-plugin-nuxt": "^2.0.0"
-	}
+	},
+	"packageManager": "pnpm@8.13.0+sha256.fbcf256db6d06bc189e31df34b3ed61220f3ba9f78a2ca8fe7be0fce4670dbd3"
 }
